# fastinni

./: .env  .gcloudignore  .gitignore  README.md  __main__.py  app.yml  babel.config.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  webpack.config.js
.github/: dependabot.yml
.github/workflows/: codeql.yml
api/: __init__.py  __main__.py  exceptions.py  routers.py  security.py
api/account/: __init__.py  login.py  signup.py
api/db/: __init__.py  __main__.py  access_client.py  authorization_token.py  bearer_token.py  client.py  token.py  user.py
api/oauth/: __init__.py  google.py
api/v1/: __init__.py
api/v1/account/: __init__.py
api/v1/oauth/: __init__.py  endpoints.py  google.py  provider.py  request_validator.py
app/: __init__.py  config.py  extensions.py  routers.py
app/api/v1/: __init__.py  csrf.py  (+1 more)
app/sql/: __init__.py  post.py  role.py  tables.py  tag.py  user.py
app/tables/: __init__.py  user.py
app/v1/: __init__.py  csrf.py  user.py
app/v100/: __init__.py  csrf.py  user.py
fastinni/: __init__.py  __main__.py  extensions.py  security.py  settings.py
fastinni/api/: __init__.py  account.py  csrf.py  data.py  routers.py
fastinni/app/: __init__.py  config.py  exceptions.py  extensions.py  middlewares.py  security.py
fastinni/db/: __init__.py  user.py
migrations/: env.py  script.py.mako
migrations/versions/: __init__.py
src/css/: fonts.css  footer.css  header.css  loading.css  login.css  main.css  masthead.css  packed.css  styles.css
src/js/: App.jsx  Header.jsx  ImageContainer.jsx  Loading.jsx  Masthead.jsx  Store.jsx  cookies.jsx  index.jsx
static/: main.jsx
static/admin/: main.jsx
static/blocks/: Form.jsx
static/components/: App.jsx  Container.jsx  ErrorMessage.jsx  Footer.jsx  Header.jsx  Loading.jsx  LoadingContainer.jsx  LoginContainer.jsx  ProfileContainer.jsx  SettingsContainer.jsx  Topnav.jsx
static/contexts/: AccountContext.jsx  ActiveContainerTabContext.jsx  ErrorContext.jsx  HeaderContext.jsx  LoginContext.jsx  SettingsContext.jsx  ThemeContext.jsx
static/general/: ThemeContext.jsx  cookies.js
static/index/: main.jsx
static/sass/: _fonts.scss  _theming.scss  footer.scss  header.scss  loading.scss  login.scss  main.scss  themes.scss
static/scss/: _fonts.scss  login.scss  main.scss
utils/: create_admin.py  create_certs.py  create_secrets.py  gen_basic_env_file.py  gen_env_file.py  set_up_env.py
(+74 files in other folders)
