[tool.poetry]
name = "fastinni"
version = "0.1.0"
description = ""
authors = ["MoonshotsLaptop <124398293+MoonshotsLaptop@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.14"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}


[tool.poetry.group.dev.dependencies]
datetime = "^5.4"
requests = "^2.31.0"
pyopenssl = "^23.3.0"


[tool.poetry.group.oauth.dependencies]
oauthlib = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"