[tool.poetry]
name = "fastinni"
version = "0.1.0"
description = ""
authors = ["MoonshotsLaptop <124398293+MoonshotsLaptop@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
datetime = "^5.4"
fastapi = "^0.109.2"
fastapi-csrf-protect = "^0.3.3"
oauthlib = "^3.2.2"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlmodel = "^0.0.14"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
requests = "^2.31.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pyopenssl = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"